classDiagram
    direction LR
    
    class Item {
        +Int identifier
        +string name
        +Dimensions dimension
        +Barcode itemCode
    }

    class Box {
        +Int identifier
        +Dimensions dimension
        +Date expire
        +Date production
        +Barcode boxItemsCode
        +Set~Item~ items
    } 

    class Pallet {
        +Int identifier
        +Int dimension
        +Set~Box~ boxes
        +Set~Item~ items
    }

    class Barcode {
        +Int identifier
        +String barcode
    }


    Barcode <|-- Item : "1"
    Barcode <|-- Box : "1"
    Item "1..*" --> "1" Box : contains
    Box "1..*" -- "1" Pallet : contains

